--- a/templates/landing.html
+++ b/templates/landing.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="exchanger shadow_block raised">
-        <form class="raised_inner" method="post">{% csrf_token %}
+        <form class="raised_inner" method="post" action="{% url "converter_app.views.landing" %}">{% csrf_token %}
             <div class="from_currency">
                 <div class="amount_wrapper control-group">
                     <input class="amount input-small" type="text" placeholder="Amount" name="amount"
